# pyrochrome

./: .gitignore  DATA.md  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml  results.md
.github/workflows/: ci.yml
prototypes/: glaze_baseline.py  glaze_predictor.html  glaze_renderer.html
reports/: REPORT.md
src/pyrochrome/: __init__.py
src/pyrochrome/api/: __init__.py  main.py
src/pyrochrome/models/: __init__.py  baseline.py  color_regression.py  compare.py  datasets.py  evaluate.py  export.py  inference.py  neighbors.py  selected.py  train.py
src/pyrochrome/pipeline/: __init__.py  atmosphere.py  color.py  cones.py  download.py  features.py  labels.py
tests/: test_atmosphere.py  test_color.py  test_cones.py  test_evaluate.py  test_features.py  test_inference.py  test_labels.py  test_neighbors.py  test_train.py
web/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: recipes.json
web/src/: api.ts  chemistry.ts  color.ts  cones.ts  dom.ts  inference.ts  main.ts  radar.ts  recipes.ts  renderer.ts  router.ts  style.css  types.ts
web/src/components/: neighbourChart.ts
web/src/data/: confusion.ts
web/src/model/: classifier_colour.json  classifier_surface.json  classifier_transparency.json  regressor_lab.json
web/src/views/: about.ts  design.ts  docs.ts  predict.ts
